# Ollama-Chat-UI

./: .gitignore  README.md  chat_widget.py  chat_window.py  config.py  icon_data.py  main.py  ollama_client.py  pyproject.toml
.vcode/: tasks.json
logs/: chat_20260322_101853.txt  chat_20260322_102621.txt  chat_20260322_103640.txt  chat_20260322_193546.txt  chat_20260323_164537.txt  chat_20260323_164642.txt  chat_20260323_171206.txt  chat_20260323_171249.txt
